objects/RajBuilding__c.object
<CustomObject>
    <fields>
        <fullName>RajBuildingArea__c</fullName>
        <description>RajBuildingArea</description>
        <label>RajBuildingArea</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RajBuildingCity__c</fullName>
        <description>RajBuildingCity</description>
        <label>RajBuildingCity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RajBuildingRating__c</fullName>
        <description>RajBuildingRating</description>
        <label>RajBuildingRating</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>RajBuilding</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RajBuilding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RajBuildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RajRule1</fullName>
        <active>false</active>
        <description>RajRule1</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>User should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule10</fullName>
        <active>false</active>
        <description>RajRule10</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule11</fullName>
        <active>false</active>
        <description>RajRule11</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule12</fullName>
        <active>false</active>
        <description>RajRule12</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule2</fullName>
        <active>false</active>
        <description>RajRule2</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>User should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule3</fullName>
        <active>false</active>
        <description>RajRule3</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule4</fullName>
        <active>false</active>
        <description>RajRule4</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule5</fullName>
        <active>false</active>
        <description>RajRule5</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule6</fullName>
        <active>false</active>
        <description>RajRule6</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule7</fullName>
        <active>false</active>
        <description>RajRule7</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule8</fullName>
        <active>false</active>
        <description>RajRule8</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RajRule9</fullName>
        <active>false</active>
        <description>RajRule9</description>
        <errorConditionFormula>NOT($User.IsActive)</errorConditionFormula>
        <errorMessage>user should be active</errorMessage>
    </validationRules>
</CustomObject>